# docs/api.yaml
@@ -194,6 +194,102 @@ paths:
       responses:
         '204':
           description: Comment resource deleted
+  /api/posts:
+    get:
+      tags:
+        - Posts
+      summary: Get all posts
+      responses:
+        '200':
+          description: A list of posts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+    post:
+      tags:
+        - Posts
+      summary: Create a new post
+      responses:
+        '201':
+          description: Post created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        422:
+          description: Unprocessable entity/content
+      requestBody:
+          required: true
+          content:
+            application/json:
+                schema:
+                  $ref: '#/components/schemas/Post'
+  /api/posts/{id}:
+    get:
+      tags:
+        - Posts
+      summary: Get a post by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the post
+      responses:
+        '200':
+          description: A post
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '404':
+          description: Post not found
+    patch:
+      tags:
+        - Posts
+      summary: Update a post by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the post
+      responses:
+        '200':
+          description: Post resource updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '404':
+          description: Post not found
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+    delete:
+      tags:
+        - Posts
+      summary: Delete a post by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the post
+      responses:
+        '204':
+          description: Post resource deleted
+        409:
+          description: Conflict
 components:
   schemas:
     Category:
@@ -223,3 +319,21 @@ components:
         post_id:
           type: integer
           example: 1
+    Post:
+      type: object
+      description: A post
+      deprecated: false
+      properties:
+          id:
+            readOnly: true
+            type: integer
+            example: 1
+          title:
+            type: string
+            example: "Post title"
+          content:
+            type: string
+            example: "This is a post"
+          category_id:
+            type: integer
+            example: 1
